Fix sidebar layout issue affecting firefox
In firefox a scrollbar gets added due to how the margins were arranged.
This change removes the negative margin magic to make the logic simpler.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -79,7 +79,6 @@ body, html {
 }
 
 .playerinfo {
-  margin-bottom: -20px;
   overflow: hidden;
   padding: 14px;
   text-align: center;
@@ -99,8 +98,14 @@ body, html {
     visibility: visible;
   }
 
+  .cover-wrapper {
+    position: relative;
+  }
+
   .hide-button {
-    margin-top: -67px;
+    left: calc(50% - 15px);
+    position: absolute;
+    top: 210px;
     visibility: hidden;
   }
 
